--- a/HTML/index_1.html
+++ b/HTML/index_1.html
@@ -9,7 +9,35 @@
    <center><h1>This is my heading tag </h1></center>
    <h3> <a href="https://www.hackerrank.com/dashboard">this is my h6 tag</a> </h3>
     <h4><a href="https://byjus.com/"target ="blank">this is h4 tag</a></h4>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti quibusdam quo. Repudiandae eveniet animi maxime architecto laborum sunt nobis mollitia ab. Repudiandae, mollitia dolores qui quas fugiat optio dicta, eius in corporis distinctio natus delectus rerum ut eligendi aliquid exercitationem temporibus nobis quibusdam repellat ipsa at? Repellat, soluta ipsum asperiores reprehenderit obcaecati vitae unde velit perferendis iste accusantium laborum reiciendis nihil aliquid excepturi nobis aut! Itaque exercitationem deleniti, fugit saepe accusamus nesciunt, labore nobis illo praesentium nam pariatur aut corporis cupiditate porro esse! Aliquam, eveniet dolor? Autem ratione sed nam, voluptatem rerum in ex nostrum quos, dignissimos dicta voluptate!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aliquid ex. Autem dolore neque impedit id nemo ipsa quia architecto, veritatis, at dicta enim quis similique excepturi voluptas commodi sit.</p>
     <img src="firewoerk.jpg" alt="image not found"width="300">
+    <video src="mov_bbb.mp4" autoplay controls loop width="300"></video><br>
+    <audio src="Dope-Shope(PaglaSongs).mp3" controls width="300"></audio><br>
+    <table border="2" width="400"> 
+        <tr> 
+            <th>S.no</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>city</th>
+        </tr>
+        <tr>
+            <td>1.</td>
+            <td rowspan="2">uttam</td>
+            <td>uttam@gmail.com</td>
+            <td>jaipur</td>
+        </tr>
+        <tr>
+            <td>2.</td>
+            <td>shubham</td>
+            <td>shubham@gmail.com</td>
+            <td>tonk</td>
+        </tr>
+        <tr>
+            <td>3.</td>
+            <td colspan="2">surya</td>
+            <td>surya@gmail.com</td>
+            <td>khuri</td>
+        </tr>
+    </table>
 </body>
 </html>
