update in travela

--- a/HTML/Travela.html
+++ b/HTML/Travela.html
@@ -179,7 +179,8 @@
             opacity: 0.5;
         }
         .explore{
-            border: 2px solid black;
+            top: 200px;
+            /* border: 2px solid black; */
             position: absolute;
             z-index: 1;
             max-width: 900px;
@@ -203,8 +204,21 @@
             font-family: "jost" sans-serif;
             margin: 0px 0px 24px;
             font-weight: 700;
+            letter-spacing: 3px; 
+            font-weight: 700 !important;
+            font-size: calc(1.275rem + 0.3vw);
+            text-transform: uppercase !important;
+            margin-bottom: 1.5rem !important;
+        }
+        .explore h1{
+            font-size: 65px;
             letter-spacing: 3px;
-            
+          text-transform: capitalize !important;
+          margin-bottom: 1.5rem !important;
+        }
+        .explore p{
+            font-size: 1.25rem !important;
+            margin-bottom: 3rem !important;
         }
     </style>
 </head>
@@ -243,9 +257,9 @@
         <div class="baground">
         </div>
         <div class="explore">
-            <h4 >Explore the world</h4>
-            <h1 >Let's The World Together!</h1>
-            <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, corrupti? Nam a sed harum, quos, nobis ducimus, minima impedit iure necessitatibus quisquam ea dolorem architecto qui? Quidem beatae blanditiis dolorum!</p>
+           <center><h4 >Explore the world</h4></center> 
+            <center><h1 >Let's The World Together!</h1></center>
+            <center><p >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,  </p></center>
         </div>
     </div>
 
