update in BR template

--- a/HTML/BR_template.html
+++ b/HTML/BR_template.html
@@ -211,16 +211,20 @@
             border: none;
         }
         .power{
-            height: 60px;
+            height: 85px;
             width: 100%;
             justify-content: center;
-            color: white;
+            color: #fff;
             align-items: center;
             background-color: black;
             text-align: center;
             display: flex;
-            padding: 25px;
-            top: 5px;
+            padding: 16px;
+            top: 8px;
+            font-size: 1.15rem;
+            a{
+                color: white;
+            }
         }
         .rode{
             justify-content: center;
